--- a/views/submit.pug
+++ b/views/submit.pug
@@ -1,11 +1,10 @@
 doctype
 html
   head
-    title Submit URL
+    title _Byp
   body
     p This is a free site that can let you bypass restrictions placed on your internet connection.
-      |  Most (but not all) sites should be able to render their main content while advanced features such as sign in are almost guaranteed to not work.
-      |  It is a good idea to include
+      |  Most (but not all) sites should be able to render their main content while advanced features such as sign in are almost guaranteed to not work. It is a good idea to include
       code  http://
       |  or
       code  https://
@@ -16,6 +15,8 @@ html
     p This is
       b  ALPHA
       |  software. No level of stability is to be expected.
+
+    p Navigation buttons in your browser (back, refresh, etc) may be inconsistent.
 
     if msg !== ""
       p
