--- a/views/submit.pug
+++ b/views/submit.pug
@@ -29,5 +29,5 @@ html
       a(href="clearcookies") Clear Cookies (can fix things)
 
     p Source code will be on GitHub or something soon.
-    p Contact me: tommyweber at gmail dot com
+    p Contact me: tommyweber33 at gmail dot com
       small  (futile attempt to avoid spambots)
